NBNP-131 Make show all/less links full-width clickable like items

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -269,6 +269,7 @@ ul.js-facets-checkbox-links + a.open::before {
   margin-bottom: 1em;
 }
 .facets-soft-limit-link {
+  display: block;
   margin-left: .5em;
 }
 
