NBNP-95 Conistent whitespace for non-sortable table headers

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -523,7 +523,9 @@ a.btn-add::before {
   border-top: 2px solid #ddd;
 }
 th[class*="-sort"] a,
-th[class*="-date"] a {
+th[class*="-date"] a,
+th#view-issue-title-table-column,
+th#view-nothing-table-column {
   padding: .5em;
   white-space: nowrap;
 }
