--- a/custom/modules/digital_serial/modules/digital_serial_title/templates/digital-serial-title.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_title/templates/digital-serial-title.html.twig
@@ -1,2 +1,7 @@
 {# Digital Serial Title Issues template: embedded digital_issue_list view #}
+<div class="alert alert-info fade in alert-dismissable">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
+    <small><i class="glyphicon glyphicon-info-sign"></i></small>
+    <b>Found {{ title_page_count }} pages in {{ title_issue_count }} issues.</b>
+</div>
 {{ drupal_view('digital_issue_list','view_title_issues_block', digital_serial_title_id) }}
