NBNP-11 Remove underline on linked panel icons

--- a/custom/modules/newspapers_core/css/pub-form.css
+++ b/custom/modules/newspapers_core/css/pub-form.css
@@ -12,6 +12,7 @@
 	font-family: 'Glyphicons Halflings';
 	content: "\e159";
 	color: #5cb85c;
+	display: inline-block;
 	font-weight: normal;
 	margin-right: .25em;
 	vertical-align: text-top;
