--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -583,3 +583,14 @@ a.back-link::before {
     padding-left: 0;
   }
 }
+@media (max-width: 600px) {
+  .image-placeholder {
+    max-width: 120px;
+  }
+}
+@media (min-width: 768px)
+and (max-width: 991px){
+  .image-placeholder {
+    max-width: 120px;
+  }
+}
