--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -571,6 +571,12 @@ th[class*="-date"] a::before {
 .toggle-wrapper input {
   vertical-align: top;
 }
+.toggle-wrapper label:hover {
+  color: $link-color-hover;
+}
+.toggle-wrapper input:hover {
+  cursor: pointer;
+}
 .filters .form-group {
   max-width: 24.9%;
 }
