NBNP-95 Misc text/style update

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -21,6 +21,10 @@ a:not(.btn):focus {
   border-style: none;
   text-decoration: underline;
 }
+ins {
+  color: $text-muted;
+  text-decoration: none;
+}
 
 /* Class/ID style tweaks */
 .title-info figure {
