NBNP-142 Set small-width rules for Issues exposed filters

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -607,6 +607,12 @@ a.back-link::before {
   .no-gutters > aside {
     padding-left: 0;
   }
+  .filters button.form-submit {
+    margin-top: 0;
+  }
+  .filters .form-group {
+    max-width: 35%;
+  }
 }
 @media (max-width: 600px) {
   .image-placeholder {
