--- a/custom/themes/newspapers_lib_unb_ca/templates/views-exposed-form--digital-issue-list--view-title-issues-block.html.twig
+++ b/custom/themes/newspapers_lib_unb_ca/templates/views-exposed-form--digital-issue-list--view-title-issues-block.html.twig
@@ -24,7 +24,7 @@
 <div class="toggle-wrapper input-group">
   <label for="toggle-widget" class="checkbox-toggle">
     <input id="toggle-widget" type="checkbox" {% if values|length %}checked{% endif %}/>
-      {% trans %}Show Search Filters{% endtrans %}
+      {% trans %}Show Filter Options{% endtrans %}
   </label>
 </div>
 <div class="filters form--inline form-inline clearfix">
