NBNP-69 Override underline hover for Search autocomplete

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -570,6 +570,10 @@ th[class*="-date"] a::before {
 .search-api-autocomplete-search .ui-menu-item:hover {
   background: inherit;
 }
+.ui-autocomplete a:focus,
+.ui-autocomplete a:hover {
+  text-decoration: none;
+}
 
 /* Digital Issue List exposed Views filters */
 .toggle-wrapper input {
