NBNP-162 Add Twig raw filter to stop escaping HTML tags

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -271,7 +271,7 @@
                                         {% for field in item %}
                                             {% if field.value %}
                                                 <dt>{{ field.label }}:</dt>
-                                                <dd>{{ field.value }}</dd>
+                                                <dd>{{ field.value|raw }}</dd>
                                             {% endif %}
                                         {% endfor %}
                                     </dl>
