NBNP-167 Rework holdings section markup, remove bootstrap toggles

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -89,7 +89,7 @@
 
     <fieldset class="title-info">
         <legend>{% trans %}Description{% endtrans %}</legend>
-        <dl>
+        <dl class="title-details">
         {% if content.field_sample_image|field_value %}
             {% if content.field_sample_image|field_value %}
                 <figure>
@@ -231,61 +231,43 @@
     <fieldset>
         <legend>{% trans %}UNB Libraries' Holdings{% endtrans %}</legend>
         {% if holding|length > 0 %}
+            <dl class="holding-type">
             {% if holding.local_digital|length > 0 %}
-            <div role="tablist" aria-multiselectable="true">
-                <div class="panel-title" role="tab" id="headingDigital">
-                    <a role="button" data-toggle="collapse" href="#collapseDigitial" aria-expanded="true" aria-controls="collapseDigitial">
-                        {% trans %}Digital Versions{% endtrans %}
-                    </a>
-                </div>
-                <div id="collapseDigitial" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingDigital">
-                    <div class="panel-body">
-                        {% for item in holding.local_digital %}
-                            <div class="holding-details">
-                                <dl>
-                                    {% for field in item %}
-                                        {% if field.value %}
-                                            <dt>{{ field.label }}:</dt>
-                                            <dd>{{ field.value }}</dd>
-                                        {% endif %}
-                                    {% endfor %}
-                                </dl>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
+            <dt>{% trans %}Digital Versions{% endtrans %}:</dt>
+            <dd>{% for item in holding.local_digital %}
+                <dl class="holding-item">
+                    {% for field in item %}
+                        {% if field.value %}
+                            <dt>{{ field.label }}:</dt>
+                            <dd>{{ field.value }}</dd>
+                        {% endif %}
+                    {% endfor %}
+                </dl>
+            {% endfor %}
+            </dd>
             {% endif %}
 
             {% if holding.microfilm|length > 0 %}
-                <div role="tablist" aria-multiselectable="true">
-                    <div class="panel-title" role="tab" id="headingMicrofilm">
-                        <a role="button" data-toggle="collapse" href="#collapseMicrofilm" aria-expanded="true" aria-controls="collapseMicrofilm">
-                            {% trans %}Microfilms{% endtrans %}
-                        </a>
-                    </div>
-                    <div id="collapseMicrofilm" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingMicrofilm">
-                        <div class="panel-body">
-                            {% for item in holding.microfilm %}
-                                <div class="holding-details">
-                                    <dl>
-                                        {% for field in item %}
-                                            {% if field.value %}
-                                                <dt>{{ field.label }}:</dt>
-                                                <dd>{{ field.value|raw }}</dd>
-                                            {% endif %}
-                                        {% endfor %}
-                                    </dl>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
+            <dt>{% trans %}Microfilms{% endtrans %}:</dt>
+            <dd>
+                {% for item in holding.microfilm %}
+                    <dl class="holding-item">
+                        {% for field in item %}
+                            {% if field.value %}
+                                <dt>{{ field.label }}:</dt>
+                                <dd>{{ field.value|raw }}</dd>
+                            {% endif %}
+                        {% endfor %}
+                    </dl>
+                {% endfor %}
+             </dd>
             {% endif %}
+            </dl>
          {% else %}
-                <div class="text-muted">
-                    <small><i class="glyphicon glyphicon-info-sign"></i></small>
-                    {% trans %}No holdings found.{% endtrans %}
-                </div>
+            <div class="text-muted">
+                <small><i class="glyphicon glyphicon-info-sign"></i></small>
+                {% trans %}No holdings found.{% endtrans %}
+            </div>
         {% endif %}
         </fieldset>
 </aside>
