NBNP-170 Update holding type physical->print

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -263,10 +263,10 @@
              </dd>
             {% endif %}
 
-            {% if holding.physical|length > 0 %}
+            {% if holding.print|length > 0 %}
                 <dt>{% trans %}Print{% endtrans %}:</dt>
                 <dd>
-                    {% for item in holding.physical %}
+                    {% for item in holding.print %}
                         <dl class="holding-item">
                             {% for field in item %}
                                 {% if field.value %}
